fix: Add z-index to .button:hover so border doesn't end up behind other cells' backgrounds

--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,7 @@
   cursor: pointer;
   font-size: 1.5em;
   outline: solid black 4px;
+  z-index: 1;
 }
 
 .button.used {
